<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketTexto_activity">

    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="470dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:cardBackgroundColor="#E1E1E1"
        >


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/pay_de_queso_chic_1_0x_14_89"
            android:layout_marginStart="45dp" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="22dp"
            android:text="@string/chile_en_polvo_1_0x_10_46"
            android:layout_marginStart="45dp" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="40dp"
            android:text="@string/chicharron_pella_0_17x_26_44"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="59dp"
            android:text="@string/jicama_kg_0_70x_8_81"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="76dp"
            android:text="@string/melon_kg_1_39x_11_70"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="95dp"
            android:text="@string/tomatillo_kg_0_28x_4_93"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="113dp"
            android:text="@string/queso_temazcal_0_29x_30_64"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="130dp"
            android:text="DESHEBRADA DE RES    0.28x     $48.93"
            android:layout_marginStart="45dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="148dp"
            android:text="@string/alas_picositas_bac_0_28x_86_42"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="165dp"
            android:text="@string/insecticida_oko_ca_1_0x_54_53"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="183dp"
            android:text="@string/chile_en_polvo_1_0x_10_46"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="200dp"
            android:text="@string/pasta_dental_colg_1_0x_10_46"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="220dp"
            android:text="@string/milanesa_de_puerco_0_46x_42_46"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="240dp"
            android:text="@string/salchicha_salch_0_50x_14_90"
            android:layout_marginStart="45dp" />
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="265dp"
            android:text="@string/linea" />


        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="285dp"
            android:text="@string/total_de_su_compra_390_51"
            android:layout_marginStart="45dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#1C57DB">

        <ImageView
            android:id="@+id/home"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="14dp"
            app:srcCompat="@drawable/casablanca" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="128dp"
            app:srcCompat="@drawable/busqueda"
            />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="197dp"
            app:srcCompat="@drawable/camera1"

            />

        <ImageView
            android:id="@+id/config"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="263dp"
            app:srcCompat="@drawable/ajustes_vacio" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/save"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/save" />

</RelativeLayout>