<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiTicket_activity">




    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:srcCompat="@drawable/logodos"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/mi_presupuesto1"
        android:textAllCaps="false"
        android:textColor="#0794FE"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="100dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/mis_gastos1"
        android:textAllCaps="false"
        android:textColor="#0794FE"
        android:textSize="10sp"
        android:layout_marginStart="127dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="250dp"
        android:background="@drawable/rounded_corners_blue"
        android:text="@string/mis_tickets1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_marginStart="243dp"
        tools:ignore="SmallSp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#1C57DB">

        <ImageView
            android:id="@+id/home"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="60dp"
            app:srcCompat="@drawable/casablanca"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="128dp"
            app:srcCompat="@drawable/busqueda"
            android:contentDescription="@string/todo1"
            android:layout_marginStart="128dp" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="197dp"
            app:srcCompat="@drawable/camera1"

            android:contentDescription="@string/todo2"
            tools:ignore="ContentDescription"
            android:layout_marginStart="197dp" />

        <ImageView
            android:id="@+id/config"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="263dp"
            app:srcCompat="@drawable/ajustes_vacio"
            android:contentDescription="@string/todoo"
            tools:ignore="ContentDescription"
            android:layout_marginStart="263dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardsoriana"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_below="@id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:cardBackgroundColor="@color/white"
        >

        <ImageView
            android:id="@+id/logo_soriana"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/logosoriana"
            android:contentDescription="@string/todo"
            android:layout_marginStart="15dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="19dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/hace_2_dias"
            android:layout_marginStart="135dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="19dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/_390_51"
            android:layout_marginStart="270dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="360dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardsoriana"
        app:cardBackgroundColor="#D8D8D8"
        >


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:text="PAY DE QUESO CHIC      1.0x      $14.89" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="22dp"
            android:text="CHILE EN POLVO            1.0x       $10.46" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="40dp"
            android:text="CHICHARRON PELLA     0.17x    $26.44" />

    </androidx.cardview.widget.CardView>


</RelativeLayout>