<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiPresupuesto_activity">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:srcCompat="@drawable/logodos"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_corners_blue"
        android:text="@string/mi_presupuesto1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="100dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/mis_gastos1"
        android:textAllCaps="false"
        android:textColor="#0794FE"
        android:textSize="10sp"
        android:layout_marginStart="127dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="250dp"

        android:text="@string/mis_tickets1"
        android:textAllCaps="false"
        android:background="@drawable/rounded_corners"
        android:textColor="#0794FE"
        android:textSize="10sp"
        android:layout_marginStart="243dp"
        tools:ignore="SmallSp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#1C57DB">

        <ImageView
            android:id="@+id/home"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="60dp"
            app:srcCompat="@drawable/casablanca"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="128dp"
            app:srcCompat="@drawable/busqueda"
            android:contentDescription="@string/todo1"
            android:layout_marginStart="128dp" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="197dp"
            app:srcCompat="@drawable/camera1"

            android:contentDescription="@string/todo2"
            tools:ignore="ContentDescription"
            android:layout_marginStart="197dp" />

        <ImageView
            android:id="@+id/config"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="263dp"
            app:srcCompat="@drawable/ajustes_vacio"
            android:contentDescription="@string/todoo"
            tools:ignore="ContentDescription"
            android:layout_marginStart="263dp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="Período:" />


    <RadioButton
        android:id="@+id/semanalmente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView27"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:text="Semanalmente" />

    <RadioButton
        android:id="@+id/quincenalmente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/semanalmente"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:text="Quincenalmente" />

    <RadioButton
        android:id="@+id/mensualmente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quincenalmente"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:text="Mensualmente" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mensualmente"
        android:ems="10"
        android:hint="Ingresa tu presupuesto"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:inputType="number" />

    <Button
        android:id="@+id/button7"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_below="@id/editTextNumber"
        android:layout_marginTop="65dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners_blue"
        android:text="Guardar" />


</RelativeLayout>